added some new things

--- a/index.html
+++ b/index.html
@@ -1,8 +1,25 @@
 <!DOCTYPE html>
+
+<head>
+<link rel = "stylesheet" href = "style.css"/>
+<title>Static Page</title>
+</head>
+
 <html>
 <body>
+    <nav>
+        <a href = "index2.html">
+            <img src ="images/pikachu.png"/>
+        </a>
+
+
+
+
+
+    </nav>
+
 
 <h1>Loading page</h1>
-<h2>test</h2>
+
 </body>
 </html>
