--- a/index.html
+++ b/index.html
@@ -1,25 +1,23 @@
 <!DOCTYPE html>
 
 <head>
-<link rel = "stylesheet" href = "style.css"/>
-<title>Static Page</title>
+    <link rel="stylesheet" href="style.css" />
+    <title>Static Page</title>
 </head>
 
 <html>
+
 <body>
     <nav>
-        <a href = "index2.html">
-            <img src ="images/pikachu.png"/>
+        <a href="index2.html">
+            <img src="images/pikachu.png" />
         </a>
-
-
-
-
-
     </nav>
 
 
-<h1>Loading page</h1>
+    <h1>Loading page</h1>
+    <p>Testing</p>
 
 </body>
+
 </html>
