--- a/index2.html
+++ b/index2.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 
 <head>
-<link rel = "stylesheet" href = "style.css"/>
-<title>Static Page</title>
+    <link rel="stylesheet" href="style.css" />
+    <title>Static Page</title>
 </head>
 
 <html>
+
 <body>
     <nav>
-        <a href = "index1.html">
-            <img src ="images/pikachu.png"/>
+        <a href="index.html">
+            <img src="images/pikachu.png" />
         </a>
 
 
@@ -19,7 +20,8 @@
     </nav>
 
 
-<h1>Second Page</h1>
+    <h1>Second Page</h1>
 
 </body>
+
 </html>
